# freertos-variscite

./: .gitignore  DART-MIMX8MM_manifest_v3_10.xml  DART-MIMX8MM_manifest_v3_14.xml  DART-MIMX8MM_manifest_v3_6.xml  DART-MIMX8MM_manifest_v3_8.xml  DART-MIMX8MM_manifest_v3_9.xml  DART-MIMX8MP_manifest_v3_10.xml  DART-MIMX8MP_manifest_v3_14.xml  DART-MIMX8MP_manifest_v3_8.xml  DART-MIMX8MP_manifest_v3_9.xml  DART-MIMX8MQ_manifest_v3_10.xml  DART-MIMX8MQ_manifest_v3_6.xml  DART-MIMX8MQ_manifest_v3_8.xml  DART-MIMX8MQ_manifest_v3_9.xml  DART-MX8MM_manifest_v3_3.xml  DART-MX8MQ_manifest_v3_4.xml  EVK-MIMX8MM_manifest_v3_10.xml  EVK-MIMX8MM_manifest_v3_14.xml  EVK-MIMX8MM_manifest_v3_2.xml  EVK-MIMX8MM_manifest_v3_3.xml  EVK-MIMX8MM_manifest_v3_6.xml  EVK-MIMX8MM_manifest_v3_8.xml  EVK-MIMX8MM_manifest_v3_9.xml  EVK-MIMX8MN_manifest_v3_10.xml  EVK-MIMX8MN_manifest_v3_14.xml  EVK-MIMX8MN_manifest_v3_6.xml  EVK-MIMX8MN_manifest_v3_8.xml  EVK-MIMX8MN_manifest_v3_9.xml  EVK-MIMX8MP_manifest_v3_10.xml  EVK-MIMX8MP_manifest_v3_14.xml  EVK-MIMX8MP_manifest_v3_8.xml  EVK-MIMX8MP_manifest_v3_9.xml  EVK-MIMX8MQ_manifest_v3_10.xml  EVK-MIMX8MQ_manifest_v3_4.xml  EVK-MIMX8MQ_manifest_v3_6.xml  EVK-MIMX8MQ_manifest_v3_8.xml  EVK-MIMX8MQ_manifest_v3_9.xml  LA_OPT_Base_License.htm  LA_OPT_NXP_Software_License.txt  MCIMX93-EVK_manifest_v3_10.xml  (+28 more)
CMSIS/Include/: CMSIS_Include_common_MIMX8ML8.cmake  CMSIS_Include_core_cm7_MIMX8ML8.cmake  CMSIS_Include_dsp_MIMX8ML8.cmake
CMSIS/RTOS2/: CMSIS_RTOS2_NonSecure.cmake  CMSIS_RTOS2_Secure.cmake
boards/dart_mx8mp/rtos_examples/freertos_mutex/armgcc/: CMakeLists.txt
boards/evkmimx8mm/demo_apps/low_power_wakeword/armgcc/: CMakeLists.txt  MIMX8MM6xxxxx_cm4_lpv_ram.ld  config.cmake  flags.cmake
boards/evkmimx8mn/: app_srtm.c  app_srtm.h
boards/evkmimx8mp/demo_apps/low_power_wakeword/armgcc/: CMakeLists.txt  MIMX8ML8xxxxx_cm7_lpv_ram.ld  config.cmake  flags.cmake
boards/evkmimx8mp/driver_examples/sai/interrupt_record_playback/armgcc/: CMakeLists.txt
boards/mcimx93evk/cmsis_driver_examples/lpi2c/int_b2b_transfer/slave/armgcc/: CMakeLists.txt
boards/mcimx93evk/lwip_examples/lwip_dhcp_enet_qos/bm/armgcc/: CMakeLists.txt  config.cmake  flags.cmake
components/adp5585/: driver_adp5585.MIMX9352.cmake  driver_adp5585_MIMX9352.cmake
components/audio/: component_audio_sai_edma_adapter.MIMX9352.cmake
components/button/: component_button.MIMX9352.cmake
components/codec/: component_ak4497_adapter.MIMX8MM6.cmake  component_ak4497_adapter_MIMX8MM6.cmake  component_codec_adapters.MIMX8ML8.cmake  component_codec_adapters.MIMX8MM6.cmake  component_codec_adapters.MIMX8MN6.cmake  component_codec_adapters.MIMX9352.cmake  component_codec_adapters_MIMX8ML8.cmake  component_codec_adapters_MIMX8MM6.cmake  component_codec_adapters_MIMX8MN6.cmake  component_da7212_adapter.MIMX9352.cmake  component_sgtl_adapter.MIMX9352.cmake  component_wm8524_adapter.MIMX8MM6.cmake  component_wm8524_adapter.MIMX8MN6.cmake  component_wm8524_adapter_MIMX8MM6.cmake  component_wm8524_adapter_MIMX8MN6.cmake  component_wm8524_adapter_MIMX8MQ6.cmake  component_wm8960_adapter.MIMX8ML8.cmake  component_wm8960_adapter.MIMX9352.cmake  component_wm8960_adapter_MIMX8ML8.cmake  component_wm8960_adapter_MIMX9352.cmake  component_wm8962_adapter.MIMX9352.cmake  component_wm8962_adapter_MIMX9352.cmake  driver_codec.MIMX8ML8.cmake  driver_codec.MIMX8MM6.cmake  driver_codec.MIMX8MN6.cmake  driver_codec.MIMX9352.cmake  driver_codec_MIMX8ML8.cmake  driver_codec_MIMX8MM6.cmake  driver_codec_MIMX8MN6.cmake  driver_codec_MIMX8MQ6.cmake  driver_codec_MIMX9352.cmake
components/crc/: component_software_crc_adapter.MIMX9352.cmake
components/fxos8700cq/: driver_fxos8700cq.MIMX9352.cmake
components/gpio/: component_rgpio_adapter.MIMX9352.cmake  fsl_adapter_rgpio.c
components/i2c/: component_i3c_adapter.MIMX9352.cmake  component_ii2c_adapter.MIMX8ML8.cmake  component_ii2c_adapter.MIMX8MM6.cmake  component_ii2c_adapter_MIMX8ML8.cmake  component_ii2c_adapter_MIMX8MM6.cmake  component_lpi2c_adapter.MIMX9352.cmake  component_lpi2c_adapter_MIMX9352.cmake  ii2c_adapter.c
components/i3c_bus/: component_i3c_bus.MIMX9352.cmake  component_i3c_bus_adapter.MIMX9352.cmake
components/lists/: component_lists.MIMX8ML8.cmake  component_lists.MIMX8MM6.cmake  component_lists.MIMX8MN6.cmake  component_lists.MIMX9352.cmake  component_lists_MIMX8ML8.cmake  component_lists_MIMX8MM6.cmake  component_lists_MIMX8MN6.cmake  component_lists_MIMX8MQ6.cmake  component_lists_MIMX9352.cmake  generic_list.h
components/lsm6dso/: driver_lsm6dso.MIMX9352.cmake
components/mem_manager/: component_mem_manager.MIMX9352.cmake  component_mem_manager_light.MIMX9352.cmake  fsl_component_mem_manager_light.c
components/osa/: fsl_os_abstraction.h  fsl_os_abstraction_free_rtos.c  fsl_os_abstraction_free_rtos.h
components/panic/: component_panic.MIMX9352.cmake
components/pcal6524/: driver_pcal6524.MIMX9352.cmake  driver_pcal6524_MIMX9352.cmake  fsl_pcal6524.h
components/phy/: driver_mdio-common_MIMX8ML8.cmake  driver_mdio-common_MIMX8MM6.cmake  driver_phy-common_MIMX8ML8.cmake  driver_phy-common_MIMX8MM6.cmake
components/pwm/: component_pwm_tpm_adapter.MIMX9352.cmake
components/reset/: component_reset_adapter.MIMX9352.cmake
components/rng/: component_software_rng_adapter.MIMX9352.cmake
components/uart/: fsl_adapter_lpuart.c  (+12 more)
examples/imx7d_val_m4/demo_apps/rpmsg/str_echo_freertos/armgcc/: CMakeLists.txt
examples/imx7d_val_m4/driver_examples/gpt/armgcc/: CMakeLists.txt
examples/var-som-mx7_m4/demo_apps/hello_world_ocram/armgcc/: CMakeLists.txt
examples/var-som-mx7_m4/demo_apps/rpmsg/pingpong_bm/armgcc/: CMakeLists.txt
patches/: 0001-i.MX8QX-deactivated-the-LMEM-caches-to-debug-in-exte.patch  0001-iMX8M-MINI-deactivated-the-LMEM-caches-to-debug-in-e.patch  0001-iMX8MQ-deactivated-the-LMEM-caches-to-debug-in-exter.patch  0002-i.MX8QM-CM40-deactivated-the-LMEM-caches-to-debug-in.patch  0003-i.MX8QM-CM41-deactivated-the-LMEM-caches-to-debug-in.patch
var-vscode-template/: c_cpp_properties.json  launch.json  settings.json  tasks.json
(+20870 files in other folders)
